<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="#FF5722"
    tools:context=".ApplicationInformation">

    <TextView
        android:id="@+id/par2"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Title3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        tools:ignore="TextContrastCheck"
        android:text="@string/Paragraph2" />

    <Button
        android:id="@+id/B5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FF9800"
        android:text="@string/Button5"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Title2"
        android:layout_width="197dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        android:text="@string/Title2"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/par1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:text="@string/Title3"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/par1"
        android:layout_width="366dp"
        android:layout_height="194dp"
        android:layout_below="@+id/Title2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        tools:ignore="TextContrastCheck"
        android:text="@string/Paragraph1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="246dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="5dp"
        android:text="@string/RevHist_1"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>